# eviann

./: Makefile.am  README.md  configure.ac  evaluate.sh  evaluate_gffcompare.sh  gffcompare  gffread  miniprot  miniprot.tgz  snap.tgz  trmap
src/: TransDecoder.LongOrfs  TransDecoder.Predict  add_cds_to_gff.pl  add_features.pl  assign_class_code.pl  check_cds.pl  combine_gene_protein_gff.pl  compute_junction_counts.pl  compute_junction_scores.pl  compute_junction_scores_bed.pl  compute_negative_junction_scores_bed.pl  compute_start_scores.pl  convert_miniprot_gff.pl  convert_trna.sh  count_junctions.pl  detect_readthrough_exons.pl  detect_readthrough_exons.py  detect_readthroughs.pl  detect_readthroughs.py  eugene.sh  eviann.sh  eviprot.linearcluster.sh  eviprot.sh  extract_utr_transcripts.pl  ez_maker.sh  filter_by_class_code.pl  filter_by_local_abundance.pl  filter_by_score.pl  filter_junctions.pl  filter_unused_proteins.pl  fix_palign_splice_sites.pl  fix_splice_junctions.pl  fix_suspect_introns.pl  get_annotation_stats.sh  get_splice_sites.pl  mask_fasta_file.pl  my_maker_functional_fasta  my_maker_functional_gff  pick_best_isoform.sh  protein2genome.sh  (+6 more)
